# KeyServer Change Log

v0.4.3
-------------------------------------------------------------------------------- 
Features:
  - Code quality improvements.
  - Unitary and integration tests for Redis.

Bug fixes:
  - Maven error with "logback-test.xml".
  - Fixed spell errors.
  - Error when is used a bad Redis password.

  
v0.4.2
-------------------------------------------------------------------------------- 
Features:
  - Code improvements for an execution more robust.
  - More unitary tests.
  - Code coverage report.

Bug fixes:
  - Fixed code quality errors.


v0.4.1
-------------------------------------------------------------------------------- 
Features:
  - HTTPs statistics page more descriptive.
  - Updated dependencies (and remove unused).
  - Simplified dependencies maintenance.
  - Improved output logs tree.

Bug fixes:
  - Improved version check system if there are new versions available.
  - Fixed Javadoc errors.


v0.4.0
-------------------------------------------------------------------------------- 
Features:
  - Improved HTTPs service and security using Jetty.
  - New KeyServer folder structure.
  - Improved logs and security register.
  - Swagger API file for client code generation.
  - OpenSource KeyServer Client tool.
  - New menu option for Jetty server statistics.

Bug fixes:
  - Solved #13 out of memory error.
  - Solved cURL problem #14 with GnuTLS/3.x.x
  

v0.3.3
-------------------------------------------------------------------------------- 
Features:
  - Now can use others Redis DB index.
  - Security log for each incoming request.
  - Configuration parameters for time intervals (DB monitor and KS updates).

Bug fixes:
  - RSA Invalid Key exception.


v0.3.2
-------------------------------------------------------------------------------- 
Features:
  - Code quality meter with Codacy.
  - Scripts for test certificates.

Bug fixes:
  - Fixed Javadoc warnings.
  - Updated KeyServer dependencies.
  - Updated Maven plugins.


v0.3.1