@@ -17,18 +17,17 @@
 package es.tid.keyserver.core;
 
 import es.tid.keyserver.config.ConfigController;
-import es.tid.keyserver.controllers.db.DataBase;
 import es.tid.keyserver.core.lib.CheckObject;
+import es.tid.keyserver.controllers.db.DataBase;
 import es.tid.keyserver.core.status.KsMonitor;
 import es.tid.keyserver.https.HttpsServerController;
 import es.tid.keyserver.https.certificate.HttpsCert;
 import es.tid.keyserver.ui.GraphicalElements;
 import es.tid.keyserver.ui.UserInterfaceController;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.util.Arrays;
 import java.util.Scanner;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Main Class for the KeyServer.
@@ -78,7 +77,7 @@ public class KeyServer {
                 softwareConfig.getServerKeyStoreFile(), 
                 softwareConfig.getServerKeyStorePassword());
         checkObj(ksCert,"HTTPs server certificate correctly loaded.", 
-                "Can't load the HTTPs server certificate..");
+                "HTTPs certificate loading process failed.");
         
         // HTTP Server.
         LOGGER.info("Starting HTTP server... ");
@@ -86,7 +85,7 @@ public class KeyServer {
                 softwareConfig, 
                 keyServerDB);
         keyServerHttp.start();
-        checkObj(keyServerHttp,"KeyServer now is ready...", 
+        checkObj(keyServerHttp,"KeyServer HTTPs server is listening.", 
                 "Can't create HTTP server.");
         
         // KeyServer Monitor object.
@@ -94,12 +93,9 @@ public class KeyServer {
                 keyServerDB, 
                 keyServerHttp, 
                 ksCert, 
-                softwareConfig.getProjectPublicUrl(),
-                softwareConfig.getVersion(),
-                softwareConfig.getChkDbInterval(),
-                softwareConfig.getChkUpdateInterval()
-        );
-        
+                softwareConfig);
+        checkObj(mon,"Monitoring KeyServer resources.", 
+                "Can't create the KeyServer monitor object.");
         // Wait until the user write q/Q to close the application.
         Scanner sc = new Scanner(System.in);
         UserInterfaceController uiController = new UserInterfaceController(
