@@ -2,3 +2,6 @@
 application.name=${pom.name}
 application.version=${pom.version}
 application.url=${pom.url}
+
+# GiHub API
+github.lastrelease=https://api.github.com/repos/mami-project/KeyServer/releases/latest
